# agent-pods

./: .gitignore  CHANGELOG.md  README.md  install.sh  uninstall.sh
adapters/: _schema.toml  aider.toml  claude-code.toml  codex.toml  cursor.toml  gemini.toml  generic-shell.toml  openclaw.toml  opencode.toml
config/: config.sh.example
docs/: adapters.md  architecture.md  autonomy.md  comms.md  gotchas.md  keybindings.md
hooks/claude-code/: install.sh  pod-awareness.sh  uninstall.sh
hooks/codex/: README.md  install.sh  uninstall.sh
lib/: palette
lib/primer/: manager.md  worker.md
modules/mcp/: README.md  pod_manager_server.py  pyproject.toml
modules/queue/: README.md
modules/queue/templates/: _registry.json  audit.tpl.txt  execute.tpl.txt  investigate.tpl.txt  plan.tpl.txt
test/: check-adapters.sh  check-context-emit.sh  check-install-modes.sh  check-model-policy.sh  check-primer.sh  check-safety-invariants.sh  check-sandbox-fallback.sh  lint-tmux-targets.sh  no-private-leaks.sh  parity-sandbox.sh  test-adapter-discovery-timeout.sh
