[project]
name = "pod-manager-mcp"
version = "0.1.0"
description = "MCP server wrapping the agent-pods manager-worker protocol (tmux pod workers + queue) as first-class tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "agent-pods", "pod", "tmux", "manager-worker", "task-queue"]
dependencies = [
    # FastMCP ships inside the official MCP Python SDK as mcp.server.fastmcp.
    "mcp>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
pod-manager-mcp = "pod_manager_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["pod_manager_server.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
